# build-archives

./: README.md  SUMMARY.md
CMake/: SUMMARY.md
CMake/MasteringCMake/: 2025-09-08-CMake-Books-Getting-started.md  2025-09-09-CMake-Books-CMake-cache.md  2025-09-09-CMake-Books-Writing-CMakeLists-files.md  2025-09-15-CMake-Books-Key-concepts.md  2025-09-16-CMake-Books-Policies.md  2025-09-17-CMake-Books-Modules.md  2025-09-21-CMake-Books-Installing-files.md  2025-09-24-CMake-Books-Finding-packages.md  2025-09-26-CMake-Books-Converting-existing-systems-to-cmake.md  2025-09-27-CMake-Books-Custom-commands.md  2025-09-29-CMake-Books-Cross-compiling-with-cmake.md  2025-10-07-CMake-Books-System-inspection.md
CMake/MasteringCMake/demo/SystemInspection/try-demo/: CMakeLists.txt  TestByteOrder.c  main.c
CMake/Tips/: 2025-09-21-CMake-Tips-Add-subdirectory.md
CMake/Tutorial/: 2025-08-28-CMake-Tutorial-A-basic-starting-point.md  2025-08-31-CMake-Tutorial-Adding-a-library.md  2025-09-01-CMake-Tutorial-Adding-generator-expressions.md  2025-09-01-CMake-Tutorial-Adding-usage-requirements-for-a-library.md  2025-09-01-CMake-Tutorial-Installing-and-testing.md  2025-09-04-CMake-Tutorial-Adding-a-custom-command-and-generated-file.md  2025-09-04-CMake-Tutorial-Adding-system-introspection.md  2025-09-04-CMake-Tutorial-Packaging-an-installer.md
GCC/: SUMMARY.md
GCC/Tips/: 2025-09-23-GCC-Tips-Command-options-for-gcc-M.md  2025-09-23-GCC-Tips-Command-options-for-gcc-x.md  2025-09-23-GCC-Tips-Overall-options-for-gcc-x.md  (+4 more)
KBuild/: SUMMARY.md
Makefile/: SUMMARY.md
(+28 files in other folders)
